2009-09-16   Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init: hold the index entries gathered 
	in pass 2 by index name in an array instead of a hash.
	Do the sorting by letter in the main program and use per index
	array or hash to hold and use the entry sorted by letter.

2009-09-15   Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: split do_simple to avoid redundant condition
	checking.
	Keep line numbers within nested styles.
	Uncomment --command handling for now.
	Use scan_line_separators to parse @float and @quotation lines
	instead of 'cmd_line'.
	Remove dead code related with cmd_line and obsolete end of line 
	protection code.
	Give a context string for substitute_text.
	Better menu entry parsing.
	Consistently remove comments and spaces at the end of line
	@-command arguments.
	Pass empty index entries and empty letters down to the last pass.
	* formats/html.init: better-looking menu entries.

2009-09-11   Patrice Dumas  <dumas@centre-cired.fr>

	* formats/docbook.init, formats/xml.init: remove the useless 
	comment at the end of the output file.

2009-09-10   Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init: keep definfoenclose for later
	passes.
	Don't treat _setfilename as a value set. It should be available 
	through get_conf.
	Handle better bogus uses of @setfilename.
	* formats/info.init: take @frenchspacing into account.
	Handle right @. followed by any of )"'] at end of line.
	* formats/html.init: modify element classes. Change class "toc" 
	for ul to class "no-bullet" ($NO_BULLET_LIST_ATTRIBUTE). @top 
	and @centerchap have now their command name as class.
	@node heading class is now "node-heading", instead of "node".
	The whole header is in an element with class "header" (was "node" when
	!$HEADER_IN_TABLE).
	* examples/,maintained_extra/: separate examples, that are kept
	in examples/, and init files that are maintained, and installed
	in the default case and put in maintained_extra/.