@@ -1,0 +1,3 @@
+This is   name  , produced by makeinfo version 4.13 from
+space_in_setfilename.texi.
+
